--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "viem": "^1.15.1"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.0.1"
+    "@openzeppelin/contracts": "^5.0.1",
+    "uniswap-v2-periphery": "^1.1.0"
   }
 }
