--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@types/chai": "^4.2.0",
     "@types/chai-as-promised": "^7.1.6",
     "@types/mocha": ">=9.1.0",
-    "@types/node": ">=16.0.0",
+    "@types/node": "^20.10.4",
     "chai": "^4.2.0",
     "hardhat": "^2.19.2",
     "hardhat-gas-reporter": "^1.0.8",
